kitsune/sumo/static/sumo/less/main.less
/* ... */
.quick-paginator {
  list-style: none;
  margin: 0;
  padding: 0;

  .prev {
    float: left;
  }

  .next {
    float: right;
  }
}

#aux-nav-left {
  float: left;
  font-size: 16px;
  font-weight: 700;
  position: relative;
  width: 40%;
  z-index: 10;

  > ul {
    list-style: none;
    margin: 0;
    padding: 0;

    > li {
      color: #000;
      display: inline-block;
      line-height: 1.2;
      margin: 0 8px 0 0;
      position: relative;
      text-align: left;

      &.dropdown {
        > a:after,
        > span:after {
          border-color: #fff transparent transparent;
          border-style: solid;
          border-width: 4px;
          content: " ";
          display: inline-block;
          height: 0;
          left: 4px;
          margin: 0 0 0 4px;
          top: 12px;
          vertical-align: middle;
          width: 0;
        }
      }

      > a,
      > a:visited,
      > span {
        color: #fff;
        font-weight: normal;
        height: 42px;
        line-height: 40px;
        padding: 0 12px;
        text-decoration: none;

        &.locale-picker {
          color: #fff;
          padding-left: 44px;
        }
      }

      > a:hover {
        background-color: #000;
        color: #fff;
        text-decoration: underline;
      }

      > svg {
        fill: #fff;
        height: 32px;
        padding-left: 12px;
        padding-top: 8px;
        position: absolute;
        width: 32px;
      }

      > ul {
        background: #fff;
        box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
        display: none;
        left: 0;
        list-style: none;
        margin: 0;
        padding: 0;
        position: absolute;
        top: 42px;
        width: 160px;

        &.double {
          width: 420px;

          > li {
            float: left;
            width: 186px;

            &:nth-child(odd) {
              clear: left;
            }
          }
        }

        > li {
          font-size: 12px;
          padding: 0 12px;

          &:hover {
            background: #f0f0f0;
          }

          > a,
          > a:visited {
            color: @textGrey;
            display: block;
            padding: 10px 0;
            text-decoration: none;
          }

          > a:hover {
            color: @textBlue;
            text-decoration: underline;
          }

          &:last-of-type {
            > a {
              border: 0;
            }
          }
        }
      }

      &:hover {
        background: #000;

        > ul {
          display: block;
        }

        a {
          text-decoration: underline;
        }
      }
    }
  }

  .unread-message-count {
    background: @textGrey;
    border-radius: 2px;
    color: #FFFFFF;
    font-size: 78%;
    font-weight: bold;
    background: #0095dd;
    background: linear-gradient(to bottom, #0095dd, #00539f);
    left: 3px;
    padding: 2px 4px;
    position: relative;
    top: -2px;
  }

  .hidden {
    display: none;
  }

  @media screen and (max-width: 1053px) {
    width: 30%;
  }
}

#aux-nav-right {
  float: right;
  font-size: 16px;
  font-weight: 700;
  z-index: 10;

  > ul {
    list-style: none;
    margin: 0 0 0 10px;
    padding: 0;

    > li {
      color: #000;
      display: inline-block;
      line-height: 1.2;
      margin: 0 8px 0 0;

      > a,
      > a:visited,
      > span {
        color: #fff;
        display: inline-block;
        font-weight: normal;
        height: 42px;
        line-height: 40px;
        padding: 0 12px;
        text-decoration: none;
      }
    }
  }

  .firefox-download-button:link,
  .firefox-download-button:visited {
    background-color: @buttonGreen;
    border-radius: 100px;
    border: 2px solid @buttonGreen;
    height: 32px;
    line-height: 30px;
    margin-left: 20px;
    margin-top: 2px;
    padding: 0 30px;
    position: relative;
    text-align: center;
    text-decoration: none;
    transition: color .1s ease-in-out, background-color .1s ease-in-out;

    &:hover,
    &:focus,
    &:active {
      background-color: saturate(darken(@buttonGreen, 5%), 10%);
      border-color: saturate(darken(@buttonGreen, 5%), 10%);
      transition: color .1s ease-in-out, background-color .1s ease-in-out;
    }
  }

  .volunteer-button:link,
  .volunteer-button:visited {
    background-color: #000;
    border: 2px solid #fff;
    border-radius: 100px;
    height: 32px;
    line-height: 30px;
    margin-left: 20px;
    margin-top: 2px;
    padding: 0 30px;
    position: relative;
    text-align: center;
    text-decoration: none;
    transition: color .1s ease-in-out, background-color .1s ease-in-out;
    width: 120px;

    &:hover,
    &:focus,
    &:active {
      background-color: saturate(darken(#fff, 5%), 10%);
      border-color: saturate(darken(#fff, 5%), 10%);
      color: #000;
      transition: color .1s ease-in-out, background-color .1s ease-in-out;
    }
  }

  .hidden {
    display: none;
  }
}

.html-rtl {
  #aux-nav-left {
    float: right;

    > ul {
      > li {
        float: left;
        padding: 0 20px 0 12px;
      }
    }

    .unread-message-count {
      right: auto;
      left: -3px;
    }
  }
  #aux-nav-right {
    float: left;

    > ul {
      > li {
        float: right;
        padding: 0 12px 0 20px;
      }
    }

    .unread-message-count {
      left: auto;
      right: -3px;
    }
  }
}

#product-cards {
  a,
  a:visited {
    color: @textGrey;
    display: block;
  }

  > li {
    min-height: 156px;
  }

  .logo-sprite {
    float: left;
    margin: 8px 15px 8px 0;
  }

  .thunderbird {
    .logo-sprite {
      background-image: url('../img/icon.thunderbird.png');
    }
  }

  .title {
    display: block;
    font-family: @OpenSans;
    font-size: 22px;
    letter-spacing: -1px;
    line-height: 22px;
    margin: 0 0 12px 99px;
  }

  .description {
    display: block;
    font-size: 16px;
    margin: 0 0 0 99px;
  }
}
/* ... */

